@@ -39,6 +39,7 @@ enum
 };
 
 void setTimeSampling (unsigned long long period, unsigned long long variability, int sampling_type);
+void setTimeSampling_postfork (void);
 void Extrae_SamplingHandler (void* address);
 
 int isSamplingEnabled(void);
